# obsidian2pdf

./: .gitignore  README.md  pyproject.toml
TestBook/: 01-intro.md
TestBook-2/: 01-intro.md  02-chapter.md  zero-intro.md
TestBook-3/: chapter.md  index.md  intro.md  summary.md
src/obsidian_pdf/: cli.py  merge.py  obsidian.py  pandoc.py
