[project]
name = "obsidian-pdf-cli"
version = "0.1.0"
description = "Convert an Obsidian folder into a PDF"
requires-python = ">=3.13"
dependencies = [
  "python-frontmatter>=1.1.0"
]

[project.scripts]
obsidian-pdf = "obsidian_pdf.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"